# rust-gpu-test

./: .gdb_history  Cargo.toml
benches/: encode_ansi_bench.rs
src/: gpu_ansi_encoder.rs  lib.rs  main.rs  shader.wgsl
src/snapshots/: gpu_ansi_encoder__gpu_ansi_encoder__tests__calc_sizes_even_width_height.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__calc_sizes_even_width_odd_height.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__calc_sizes_multiple_of_4.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__calc_sizes_odd_width_height.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__encode_ansi.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__encode_ansi.snap.new  gpu_ansi_encoder__gpu_ansi_encoder__tests__encode_ansi_multiple_of_4.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__encode_ansi_multiple_of_4.snap.new  gpu_ansi_encoder__gpu_ansi_encoder__tests__encode_ascii_zero_in_the_middle.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__encode_ascii_zero_in_the_middle.snap.new  gpu_ansi_encoder__gpu_ansi_encoder__tests__prefix_sum.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__prefix_sum_512_with_stride_128.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__prefix_sum_small.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__prefix_sum_with_stride.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__rainbow_4x3_calc_sizes.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__rainbow_4x3_encode_ansi.snap  gpu_ansi_encoder__gpu_ansi_encoder__tests__rainbow_4x3_encode_ansi.snap.new  gpu_ansi_encoder__gpu_ansi_encoder__tests__rainbow_4x3_prefix_sum.snap  (+12 more)
src/wgsl/: calc_sizes.wgsl  (+3 more)
