[package]
name = "rust-gpu-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
hsv = "0.1.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
wgpu = "27.0.1"

[dev-dependencies]
insta = { version = "1.45.0", features = ["json"] }
