[package]
name = "gpu_ansi_encoder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
hsv = "0.1.1"
term_size = "0.3.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
wgpu = "27.0.1"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_futures", "async_tokio"] }
insta = { version = "1.45.0", features = ["json"] }

[[bench]]
name = "encode_ansi_bench"
harness = false
